# dangerfarm

./: .gitignore  CMakeLists.txt  README.md
css/: main.css
include/dangerfarm/: boilerplate.h  callback.h  content.h  control.h  directory.h  file.h  html.h  lambda.h  news_content.h  page_context.h  page_context_fwd.h  project_content.h  status_codes.h
src/: about_index.c  contact_index.c  copy_file.c  css_file.c  main.c  main_index.c  make_site_directories.c  news_item.c  news_item_10_2_yak_shaving.c  news_item_website_launch.c  project_index.c  project_jemu65c02_index.c  project_jlink65c02_index.c  simple_mkdir.c  with_anchor_href_tags.c  with_default_page_context.c  with_html_content.c  with_mkdir.c  with_output_file.c  with_page_description.c  with_page_site_name.c  with_page_title.c  with_page_url.c  with_tags.c
